@@ -5,9 +5,11 @@ version 0.7.2 - xxx
  . AtlasSprite: Supports Z-order (issue #275)
  . AtlasSprite & Sprite: don't auto center sprite when setting frame (issue #281)
  . AtlasSpriteManager: supports transformations (issue #308)
+ . AtlasSpriteManager: fixes in removeChild (issue #296)
  . CocosNode: CocosNodeExtras merged into CocosNode (issue #292)
  . CocosNode: improved runAction/stopAction (issue #300)
  . CocosNode: possible memory leak when running actions (issue #298)
+ . CocosNode: dont execute an already running action (issue #299)
  . Demos: AtlasSprite with z-order (issue #275)
  . Demos: ParticleDemo uses touches to move the center of the emitter (issue #138)
  . Demos: organized tests folder (issue #280)
